--- a/static/index.html
+++ b/static/index.html
@@ -13,6 +13,20 @@
     </head>
    
     <body class="body-home">
+ 
+ <section class="hero is-fullheight">
+  <div class="hero-body">
+    <div class="container">
+      <h1 class="title">
+        Hero title
+      </h1>
+      <h2 class="subtitle">
+        Hero subtitle
+      </h2>
+    </div>
+  </div>
+</section>
+ 
         <header>
             <nav>
                 <div class="row">
