--- a/static/index.html
+++ b/static/index.html
@@ -1,16 +1,13 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="AWS trial roject.">
-
-    <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
-    <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-
-    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
-    <title>AWS Welcome</title>
+    <link rel="stylesheet" type="text/css" href="./main.css">
+    <link rel="stylesheet" type="text/css" href="./bulma.css">
+    <title>Hobbit Day</title>
 </head>
 
 <body class="body-home">
@@ -32,37 +29,33 @@
                 </div>
             </div>
         </div>
-        <footer>
-            <div class="row">
-                <div class="col span-1-of-2">
+        
+        <footer class="level">
+            <div class="level-left">
                     <ul class="social-links">
                         <li>
-                            <a href="#">
-                                <i class="ion-social-facebook"></i>
+                            <a href="https://www.facebook.com/Hobbitontours/">
+                                <i class="fab fa-facebook-square" />
                             </a>
                         </li>
                         <li>
-                            <a href="#">
-                                <i class="ion-social-twitter"></i>
+                            <a href="https://twitter.com/hashtag/hobbitday?lang=en">
+                                <i class="fab fa-twitter-square" />
                             </a>
                         </li>
                         <li>
-                            <a href="#">
-                                <i class="ion-social-googleplus"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="ion-social-instagram"></i>
+                            <a href="https://www.instagram.com/hobbitontours/?hl=en">
+                                <i class="fab fa-instagram"></i>
                             </a>
                         </li>
                     </ul>
-                </div>
             </div>
             <div class="row">
-                <p>
-                    Copyright &copy; 2018. All rights reserved.
-                </p>
+									<a class="link" href="https://bulma.io/">
+										<figure class="image overwrite-width-10rem">
+											<img src="./made-with-bulma--semiwhite.png" />
+										</figure>
+									</a>
             </div>
         </footer>
     </section>
