--- a/static/index.html
+++ b/static/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -7,6 +8,7 @@
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="./main.css">
     <link rel="stylesheet" type="text/css" href="./bulma.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
     <title>Hobbit Day</title>
 </head>
 
@@ -29,33 +31,52 @@
                 </div>
             </div>
         </div>
-        
-        <footer class="level">
-            <div class="level-left">
-                    <ul class="social-links">
-                        <li>
+
+        <footer class="footer">
+            <div class="columns">
+                <div class="column is-one-third"></div>
+
+                <div class="column">
+                    <div class="level">
+                        <div class="level-item">
                             <a href="https://www.facebook.com/Hobbitontours/">
-                                <i class="fab fa-facebook-square" />
+                                <i class="fab fa-facebook-square"></i>
                             </a>
-                        </li>
-                        <li>
+                        </div>
+                        <div class="level-item">
                             <a href="https://twitter.com/hashtag/hobbitday?lang=en">
-                                <i class="fab fa-twitter-square" />
+                                <i class="fab fa-twitter-square"></i>
                             </a>
-                        </li>
-                        <li>
-                            <a href="https://www.instagram.com/hobbitontours/?hl=en">
-                                <i class="fab fa-instagram"></i>
+                        </div>
+                        <div class="level-item">
+                            <a class="" href="https://www.instagram.com/hobbitontours/?hl=en">
+                                <span class="icon is-large">
+                                    <i class="fab fa-instagram"></i>
+                                </span>
                             </a>
-                        </li>
-                    </ul>
-            </div>
-            <div class="row">
-									<a class="link" href="https://bulma.io/">
-										<figure class="image overwrite-width-10rem">
-											<img src="./made-with-bulma--semiwhite.png" />
-										</figure>
-									</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="column">
+                    <div class="level">
+                        <div class="level-left"></div>
+                        <div class="level-right">
+
+                            <div class="level-item">
+                                <a href="https://www.instagram.com/hobbitontours/?hl=en">
+                                    <i class="fab fa-font-awesome "></i>
+                                </a>
+                            </div>
+
+                            <a class="level-item link " href="https://bulma.io/ ">
+                                <figure class="image overwrite-width-10rem ">
+                                    <img src="./made-with-bulma--semiwhite.png " />
+                                </figure>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </footer>
     </section>
