--- a/static/index.html
+++ b/static/index.html
@@ -32,27 +32,25 @@
             </div>
         </div>
 
-        <footer class="footer">
+        <footer class="footer is-transparent">
             <div class="columns">
                 <div class="column is-one-third"></div>
 
                 <div class="column">
                     <div class="level">
-                        <div class="level-item">
+                        <div class="level-item is-size-1">
                             <a href="https://www.facebook.com/Hobbitontours/">
                                 <i class="fab fa-facebook-square"></i>
                             </a>
                         </div>
-                        <div class="level-item">
+                        <div class="level-item is-size-1">
                             <a href="https://twitter.com/hashtag/hobbitday?lang=en">
                                 <i class="fab fa-twitter-square"></i>
                             </a>
                         </div>
-                        <div class="level-item">
-                            <a class="" href="https://www.instagram.com/hobbitontours/?hl=en">
-                                <span class="icon is-large">
-                                    <i class="fab fa-instagram"></i>
-                                </span>
+                        <div class="level-item is-size-1">
+                            <a href="https://www.instagram.com/hobbitontours/?hl=en">
+                                <i class="fab fa-instagram"></i>
                             </a>
                         </div>
                     </div>
