--- a/static/index.html
+++ b/static/index.html
@@ -18,64 +18,50 @@
         <div class="hero-body">
             <div class="container">
                 <div>
-                    <p class="quotation">
+                    <span class="tile is-8 notification transparent-tile">
                         “In a hole in the ground there lived a hobbit.
-                        <br> Not a nasty, dirty, wet hole, filled with the ends of worms
-                        <br> and an oozy smell, nor yet a dry, bare, sandy hole
-                        <br> with nothing in it to sit down on or to eat:
-                        <br> it was a hobbit-hole, and that means comfort.”
-                    </p>
-                    <h4>
-                        <span class="quotation">- J.R.R. Tolkien</span>
-                    </h4>
+                        Not a nasty, dirty, wet hole, filled with the ends of worms
+                        and an oozy smell, nor yet a dry, bare, sandy hole
+                        with nothing in it to sit down on or to eat:
+                        it was a hobbit-hole, and that means comfort.”
+	                    <br> - J.R.R. Tolkien
+                    </span>
                 </div>
             </div>
         </div>
 
         <footer class="footer is-transparent">
             <div class="columns">
-                <div class="column is-one-third"></div>
+                <div class="column is-one-third">
+					<figure class="image overwrite-width-10rem">
+						<a class="link" href="https://bulma.io/">
+							<img src="./made-with-bulma--semiwhite.png" />
+						</a>
+					</figure>
+                </div>
 
                 <div class="column">
-                    <div class="level">
+                    <div class="level is-mobile">
                         <div class="level-item is-size-1">
-                            <a href="https://www.facebook.com/Hobbitontours/">
-                                <i class="fab fa-facebook-square"></i>
+                            <a class="icon has-text-white" href="https://www.facebook.com/Hobbitontours/">
+                                <i class="fab fa-facebook-f"></i>
+                             </a>
+                        </div>
+                        <div class="level-item is-size-1">
+                            <a class="icon has-text-white" href="https://twitter.com/hashtag/hobbitday?lang=en">
+                                <i class="fab fa-twitter"></i>
                             </a>
                         </div>
                         <div class="level-item is-size-1">
-                            <a href="https://twitter.com/hashtag/hobbitday?lang=en">
-                                <i class="fab fa-twitter-square"></i>
-                            </a>
-                        </div>
-                        <div class="level-item is-size-1">
-                            <a href="https://www.instagram.com/hobbitontours/?hl=en">
+                            <a class="icon has-text-white" href="https://www.instagram.com/hobbitontours/?hl=en">
                                 <i class="fab fa-instagram"></i>
                             </a>
                         </div>
                     </div>
                 </div>
 
-                <div class="column">
-                    <div class="level">
-                        <div class="level-left"></div>
-                        <div class="level-right">
-
-                            <div class="level-item">
-                                <a href="https://www.instagram.com/hobbitontours/?hl=en">
-                                    <i class="fab fa-font-awesome "></i>
-                                </a>
-                            </div>
-
-                            <a class="level-item link " href="https://bulma.io/ ">
-                                <figure class="image overwrite-width-10rem ">
-                                    <img src="./made-with-bulma--semiwhite.png " />
-                                </figure>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                <div class="column"></div>
+             </div>
         </footer>
     </section>
 </body>
