--- a/static/index.html
+++ b/static/index.html
@@ -19,12 +19,10 @@
             <div class="container">
                 <div>
                     <span class="tile is-8 notification transparent-tile">
-                        “In a hole in the ground there lived a hobbit.
-                        Not a nasty, dirty, wet hole, filled with the ends of worms
-                        and an oozy smell, nor yet a dry, bare, sandy hole
-                        with nothing in it to sit down on or to eat:
-                        it was a hobbit-hole, and that means comfort.”
-	                    <br> - J.R.R. Tolkien
+                        “In a hole in the ground there lived a hobbit. Not a nasty, dirty, wet hole, filled with the ends of worms and an oozy smell,
+                        nor yet a dry, bare, sandy hole with nothing in it to sit down on or to eat: it was a hobbit-hole,
+                        and that means comfort.”
+                        <br> - J.R.R. Tolkien
                     </span>
                 </div>
             </div>
@@ -32,20 +30,14 @@
 
         <footer class="footer is-transparent">
             <div class="columns">
-                <div class="column is-one-third">
-					<figure class="image overwrite-width-10rem">
-						<a class="link" href="https://bulma.io/">
-							<img src="./made-with-bulma--semiwhite.png" />
-						</a>
-					</figure>
-                </div>
+                <div class="column is-one-third"></div>
 
                 <div class="column">
                     <div class="level is-mobile">
                         <div class="level-item is-size-1">
                             <a class="icon has-text-white" href="https://www.facebook.com/Hobbitontours/">
                                 <i class="fab fa-facebook-f"></i>
-                             </a>
+                            </a>
                         </div>
                         <div class="level-item is-size-1">
                             <a class="icon has-text-white" href="https://twitter.com/hashtag/hobbitday?lang=en">
@@ -61,7 +53,17 @@
                 </div>
 
                 <div class="column"></div>
-             </div>
+            </div>
+            <div class="level">
+                <div class="level-left"></div>
+                <div class="level-right">
+                    <figure class="level-item image overwrite-width-7rem">
+                        <a class="link" href="https://bulma.io/">
+                            <img src="./made-with-bulma--semiwhite.png" />
+                        </a>
+                    </figure>
+                </div>
+            </div>
         </footer>
     </section>
 </body>
