--- a/static/index.html
+++ b/static/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="./favicon.ico">
+    <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="./favicon-16x16.png" sizes="16x16">
     <title>Hobbit Day</title>
 </head>
 
@@ -55,7 +57,7 @@
 
                 <div class="column"></div>
             </div>
-            <div class="level">
+            <div class="level is-mobile">
                 <div class="level-left"></div>
                 <div class="level-right">
                     <figure class="level-item image overwrite-width-7rem">
